--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body {
 
 section {
   display: inline-block;
+  margin: 1em 0;
 }
 
 header {
@@ -41,6 +42,11 @@ header img {
   display: none;
 }
 
+.banner,
+.link-cards {
+  margin: 0;
+}
+
 .about p,
 .menu p {
   padding: 0 1em;
@@ -48,7 +54,6 @@ header img {
 
 .nav {
   list-style-type: none;
-  background-color: #ccc;
   display: none;
 }
 
@@ -171,42 +176,14 @@ nav a:hover {
   text-decoration: none;
 }
 
-.btn-big {
-  font-size: 1.5rem;
-}
-
-.btn-small {
+.btn {
   font-size: 1rem;
-}
-
-.card-1 {
-  position: relative;
-}
-
-.link-content-1 {
-  position: absolute;
-  z-index: 5000;
-}
-
-.card-4 {
-  position: relative;
-}
-
-.link-content-2 {
-  position: absolute;
-  z-index: 5000;
-}
-
-.link-content-3 {
-   position: absolute;
-   z-index: 5000;
 }
 
 .link-cards a:link {
   text-decoration: none;
   font-size: 1.5rem;
 }
-
 
 .menu img,
 .about img,
@@ -223,6 +200,7 @@ nav a:hover {
 .step-3,
 .step-4 {
   text-align: center;
+  padding: 1em 0;
 }
 
 .menu h2,
@@ -230,7 +208,17 @@ nav a:hover {
 .catering h2,
 .events h2,
 .hours h2 {
-  padding: 0.5em 0;
+  padding: 0.5em;
+}
+
+.catering {
+  background-color: #eee;
+  width: 100%;
+}
+
+.events h3,
+.events p {
+  padding: 0 1em;
 }
 
 footer {
@@ -245,8 +233,14 @@ footer {
 }
 
 .social-media img {
-  width: 30%;
+  width: 80px;
   padding: 1em 1em;
+}
+
+.map img {
+  width: 100%;
+  margin: 0;
+  padding: 1em 0 0 0;
 }
 
 @media only screen and (min-width: 25em) {
@@ -256,7 +250,14 @@ footer {
     line-height: 1.3;
   }
 
+  .banner h2 {
+    font-size: 200%;
+  }
 
+  .contents {
+    width: 70%;
+    top: 10%;
+  }
 
 }
 
@@ -265,6 +266,53 @@ footer {
   html {
     font-size: 110%;
     line-height: 1.4;
+  }
+
+  header h1 {
+    float: left;
+  }
+
+  .banner h2 {
+    font-size: 250%;
+  }
+
+  .contents {
+    width: 65%;
+    top: 15%;
+  }
+
+  .banner {
+    display: inline-block;
+    overflow: hidden;
+  }
+
+
+  ul.nav {
+    float: right;
+  }
+
+  .nav li {
+    padding: 1em 0;
+    float: left;
+    text-align: center;
+    text-decoration: none;
+    }
+
+  .nav-open,
+  .nav-close {
+    display: none;
+  }
+
+  .nav-check:checked ~ .nav-label .nav-open {
+    display: none;
+  }
+
+  .nav-check:checked ~ .nav-label .nav-close {
+    display: none;
+  }
+
+  .btn {
+    font-size: 1.5rem;
   }
 
   .card-1,
@@ -278,29 +326,24 @@ footer {
 
   .menu img {
     float: left;
-    width: 40%;
-  }
-
-  .menu p {
-    width: 60%;
-    float: left;
+    width: 50%;
+    padding: 0 1em 0 0;
   }
 
   .about img {
     float: right;
-    width: 40%;
+    width: 50%;
+    padding: 0 0 0 1em;
   }
 
-  .menu p {
-    width: 60%;
-    float: right;
-  }
-
-  nav li {
-    float: right;
-    text-align: center;
-    width: 25%;
-    text-decoration: none;
+  .step-1,
+  .step-2,
+  .step-3,
+  .step-4 {
+    float: left;
+    width: 50%;
+    padding: 1em;
+    overflow: hidden;
   }
 
   .events img {
@@ -325,6 +368,15 @@ footer {
     overflow: hidden;
   }
 
+  .social-media {
+    text-align: center;
+  }
+
+  .social-media img {
+    width: 80px;
+    padding: 1em 1em;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -334,6 +386,25 @@ footer {
     line-height: 1.5;
   }
 
+  .banner h2 {
+    font-size: 300%;
+  }
+
+  .contents {
+    width: 60%;
+    top: 25%;
+  }
+
+  .step-1,
+  .step-2,
+  .step-3,
+  .step-4 {
+    float: left;
+    width: 25%;
+    padding: 1em;
+    overflow: hidden;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
@@ -341,6 +412,15 @@ footer {
   html {
     font-size: 130%;
     line-height: 1.5;
+  }
+
+  .banner h2 {
+    font-size: 300%;
+  }
+
+  .contents {
+    width: 50%;
+    top: 25%;
   }
 
 }
