--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,12 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 section {
   display: inline-block;
-  margin: 1em 0;
+  margin-bottom: 1em;
 }
 
 header {
@@ -40,11 +41,6 @@ header h1 {
 
 header img {
   display: none;
-}
-
-.banner,
-.link-cards {
-  margin: 0;
 }
 
 .about p,
@@ -122,6 +118,17 @@ nav a:hover {
   display: block;
 }
 
+.cards img,
+.social-media img {
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+}
+
+a img:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100);
+}
+
 .img-flex {
   display: block;
   width: 100%;
@@ -177,9 +184,27 @@ nav a:hover {
   text-decoration: none;
 }
 
-.link-cards a:link {
-  text-decoration: none;
-  font-size: 1.5rem;
+section.cards {
+  margin: 0;
+  padding: 0;
+}
+
+.cards img {
+  width: 100%;
+}
+
+.card-1,
+.card-2,
+.card-3 {
+  position: relative;
+  margin: 0;
+}
+
+.card-content-1 {
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  z-index: 5000;
 }
 
 .menu img,
@@ -232,6 +257,10 @@ footer {
 .social-media img {
   width: 80px;
   padding: 1em 1em;
+}
+
+.map {
+  padding: 2em 0 2em 0;
 }
 
 .map img {
@@ -297,7 +326,7 @@ footer {
     float: left;
     text-align: center;
     text-decoration: none;
-    }
+  }
 
   .nav-open,
   .nav-close {
@@ -318,9 +347,8 @@ footer {
 
   .card-1,
   .card-2,
-  .card-3,
-  .card-4 {
-    width: 33.3%;
+  .card-3 {
+    width: 33.333%;
     float: left;
   }
 
@@ -382,14 +410,20 @@ footer {
   }
 
   .social-media {
-    padding-top: 1em;
-    text-align: center;
+    float: left;
+    width: 40%;
+    text-align: left;
   }
 
   .social-media img {
     width: 80px;
   }
 
+  .disclaimer {
+    float: right;
+    width: 60%;
+    text-align: right;
+  }
 }
 
 @media only screen and (min-width: 60em) {
