--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 Ubuntu, sans-serif;
+  font: normal 100%/1.3, sans-serif;
 }
 
 *, *::before, *::after {
@@ -20,6 +20,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  font-family: "Gilda Display", serif;
 }
 
 section {
@@ -37,6 +38,8 @@ header h1 {
   color: #000;
   font-size: 1.3rem;
   padding: 0.5em;
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
 }
 
 header img {
@@ -63,12 +66,15 @@ header img {
   text-decoration: none;
   color: #000;
   text-align: center;
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
 }
 
 nav ul {
   font-size: 0.5rem;
   margin: 0;
   padding: 0;
+
 }
 
 nav li {
@@ -154,9 +160,12 @@ a img:hover {
 }
 
 .banner h2 {
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
   font-size: 1.5rem;
   line-height: 1.3;
   margin: 0;
+  padding: 0;
   width: 100%;
 }
 
@@ -172,6 +181,8 @@ a img:hover {
   color: #fff;
   text-decoration: none;
   font-size: 1rem;
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
 }
 
 .btn:hover {
@@ -187,6 +198,9 @@ a img:hover {
 section.cards {
   margin: 0;
   padding: 0;
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
+  font-size: 120%;
 }
 
 .cards img {
@@ -225,12 +239,11 @@ section.cards {
   padding: 1em 0;
 }
 
-.menu h2,
-.about h2,
-.catering h2,
-.events h2,
-.hours h2 {
+h2 {
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
   padding: 0.5em;
+  font-size: 200%;
 }
 
 .catering {
