--- a/css/main.css
+++ b/css/main.css
@@ -245,11 +245,6 @@ h3 {
   width: 100%;
 }
 
-.events h3,
-.events p {
-  padding: 0 1em;
-}
-
 .date {
   padding: 0.5em;
   margin-right: 1em;
@@ -257,6 +252,17 @@ h3 {
   color: #fff;
   font-family: "Pathway Gothic One", sans-serif;
   text-transform: uppercase;
+  float: left;
+}
+
+.events h3 {
+  float: left;
+}
+
+.events p {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
 }
 
 footer {
