--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,6 @@ nav ul {
   font-size: 0.5rem;
   margin: 0;
   padding: 0;
-
 }
 
 nav li {
@@ -178,10 +177,6 @@ nav a:hover {
   background: #000;
 }
 
-.small {
-  font-size: 0.5rem;
-}
-
 .banner a:link {
   display: inline-block;
   padding: 0.4em 0.75em 0.3em;
@@ -232,8 +227,7 @@ section.cards {
   padding: 1em 0;
 }
 
-h2,
-h3 {
+h2 {
   font-family: "Pathway Gothic One", sans-serif;
   text-transform: uppercase;
   padding: 0.5em;
@@ -247,32 +241,39 @@ h3 {
 
 .date {
   padding: 0.5em;
-  margin-right: 1em;
   background-color: #666;
   color: #fff;
   font-family: "Pathway Gothic One", sans-serif;
   text-transform: uppercase;
-  float: left;
+  text-align: right;
+  position: absolute;
+  top: 10%;
+  z-index: 9000;
 }
 
-.events img {
-  padding-top: 1em;
+.taco-night,
+.fish-chips,
+.egg-roll {
+  position: relative;
 }
 
-.events h3 {
-  float: left;
-}
-
+.events h3,
 .events p {
-  padding: 0 1em 0 1em;
+  padding: 1em;
   margin: 0;
-  display: inline-block;
+  text-align: center;
 }
 
 footer {
   background-color: #333;
   overflow: hidden;
   color: #ccc;
+}
+
+footer h3 {
+  font-family: "Pathway Gothic One", sans-serif;
+  text-transform: uppercase;
+  padding: 0 0 0 1rem;
 }
 
 footer p {
