--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ nav a:hover {
 }
 
 .banner img {
-  height: 50%;
+  height: 70%;
 }
 
 .banner img:nth-child(2) {
@@ -137,7 +137,7 @@ nav a:hover {
 }
 
 .banner {
-  max-height: 500px;
+  max-height: 550px;
   position: relative;
   overflow: hidden;
 }
@@ -154,7 +154,7 @@ nav a:hover {
 .banner h2 {
   font-family: "Pathway Gothic One", sans-serif;
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 3rem;
   line-height: 1.3;
   margin: 0;
   padding: 0;
@@ -383,6 +383,10 @@ footer p {
 
   .nav-check:checked ~ .nav-label .nav-close {
     display: none;
+  }
+
+  .nav {
+    display: block;
   }
 
   .btn {
